Aress7/src/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>Actual_Dispatch_Date__c</fullName>
        <label>Actual Dispatch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City_del__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_del__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_to_Site__c</fullName>
        <label>Date to Site</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dispatch_Address__c</fullName>
        <label>Dispatch Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dispatch_Date__c</fullName>
        <label>Dispatch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dispatch_Status__c</fullName>
        <label>Dispatch Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dispatched</fullName>
                </value>
                <value>
                    <fullName>Awaiting iPro</fullName>
                </value>
                <value>
                    <fullName>Ready to Dispatch</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dispatched_by_iPro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dispatched by iPro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_CSV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in CSV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Postal_Code_del__c</fullName>
        <label>Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>PricebookEntry.Product2.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>PricebookEntry.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Number__c</fullName>
        <label>SKU Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <formula>PricebookEntry.Product2.SKU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_del__c</fullName>
        <label>Street</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_number__c</fullName>
        <description>Tracking # for shipped products.</description>
        <label>Tracking #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>